--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.maps.android:android-maps-utils:0.3+'
     testCompile 'junit:junit:4.12'
 }
